--- a/configure.in
+++ b/configure.in
@@ -1,7 +1,12 @@
 dnl Process this file with autoconf to produce a configure script.
 AC_INIT
-AM_INIT_AUTOMAKE(libp5glove,0.1)
+AM_INIT_AUTOMAKE(libp5glove,0.2)
 AM_CONFIG_HEADER(config.h)
+
+dnl Always pull in the macros/ directory in aclocal
+ACLOCAL="$ACLOCAL -I macros"
+AC_SUBST(ACLOCAL)
+
 
 dnl Checks for programs.
 AC_PROG_CC
@@ -15,12 +20,10 @@ AC_PATH_X
 AC_PATH_XTRA
 
 dnl Check for GL libs
-oldLIBS="$LIBS"
-LIBS="$X_LIBS $X_EXTRA_LIBS"
-AC_CHECK_LIB(GL,glEnable,,exit)
-AC_CHECK_LIB(GLU,gluPerspective,,exit,-lGL -lm)
-AC_CHECK_LIB(glut,glutMainLoop,,exit,-lGLU -lGL -lm)
-LIBS="$oldLIBS"
+MDL_HAVE_OPENGL
+if test "${have_glut}" != "yes"; then
+	AC_MSG_ERROR([Can't find the -lglut library.])
+fi
 
 dnl Replace `main' with a function in -lusb:
 AC_CHECK_LIB(usb, usb_open)
