--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -3,4 +3,4 @@ lib_LTLIBRARIES=libp5glove.la
 include_HEADERS=p5glove.h
 
 libp5glove_la_SOURCES=p5glove.h p5glove.c
-libp5glove_la_LIBADD=-lusb
+libp5glove_la_LIBADD=-lusb -lm
