Proper unwarping of the 'best' led. Updated p5hand & p5dump demos.
I expect this has broken the MacOS/X and  Win32 versions.

More to come.


git-svn-id: svn://svn.geekisp.com/ezrec/libp5glove/trunk@56 8b6f99d3-f086-0160-f163-15e20f128303

--- a/demo/Makefile.am
+++ b/demo/Makefile.am
@@ -4,12 +4,10 @@ bin_PROGRAMS=p5dump p5hand
 
 #noinst_PROGRAMS=p5data
 
-COMMON=p5common.h p5common.c
-
 p5dump_SOURCES=p5dump.c
 p5dump_LDADD=$(top_builddir)/src/libp5glove.la 
 
-p5hand_SOURCES=p5hand.c $(COMMON)
+p5hand_SOURCES=p5hand.c
 p5hand_LDADD=$(top_builddir)/src/libp5glove.la @GL_LIBS@ @X_LIBS@
 
 #p5data_SOURCES=p5data.c $(COMMON)
