Move all the usb platform-specific stuff to src/usb_hid.h
git-svn-id: svn://svn.geekisp.com/ezrec/libp5glove/trunk@61 8b6f99d3-f086-0160-f163-15e20f128303

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -2,5 +2,5 @@ lib_LTLIBRARIES=libp5glove.la
 
 include_HEADERS=p5glove.h
 
-libp5glove_la_SOURCES=p5glove.h p5glove.c
+libp5glove_la_SOURCES=p5glove.h p5glove.c usb_hid_libusb.c
 libp5glove_la_LIBADD=-lusb -lm
