--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -2,5 +2,5 @@ lib_LTLIBRARIES=libp5glove.la
 
 include_HEADERS=p5glove.h
 
-libp5glove_la_SOURCES=p5glove.h p5glove.c usb_hid_libusb.c
+libp5glove_la_SOURCES=p5glove.h p5glove.c usb_hid_libusb.c usb_hid.h
 libp5glove_la_LIBADD=-lusb -lm
