--- a/demo/Makefile.am
+++ b/demo/Makefile.am
@@ -6,4 +6,4 @@ p5dump_SOURCES=p5dump.c
 p5dump_LDADD=$(top_builddir)/src/libp5glove.la 
 
 p5hand_SOURCES=p5hand.c
-p5hand_LDADD=$(top_builddir)/src/libp5glove.la @GL_LIBS@ @X_LIBS@
+p5hand_LDADD=$(top_builddir)/src/libp5glove.la @X_LIBS@
