build: Update autoconf/automake for current releases
Signed-off-by: Jason S. McMullan <jason.mcmullan@netronome.com>

--- a/demo/Makefile.am
+++ b/demo/Makefile.am
@@ -1,9 +1,9 @@
-INCLUDES=-I$(top_srcdir)/src
+AM_CPPFLAGS=-I$(top_srcdir)/src
 
 bin_PROGRAMS=p5dump p5hand
 
 p5dump_SOURCES=p5dump.c
-p5dump_LDADD=$(top_builddir)/src/libp5glove.la 
+p5dump_LDADD=$(top_builddir)/src/libp5glove.la -lm
 
 p5hand_SOURCES=p5hand.c
-p5hand_LDADD=$(top_builddir)/src/libp5glove.la @X_LIBS@
+p5hand_LDADD=$(top_builddir)/src/libp5glove.la @X_LIBS@ -lm
